force-app/main/default/objects/Line_Item__c/fields/Invoice_statement__c.field-meta.xml
<CustomField>
    <fullName>Invoice_statement__c</fullName>
    <label>Invoice statement</label>
    <referenceTo>Invoice_statement__c</referenceTo>
    <relationshipLabel>LIne Items</relationshipLabel>
    <relationshipName>LIne_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>