force-app/main/default/objects/Line_Item__c/fields/merchandise__c.field-meta.xml
<CustomField>
    <fullName>merchandise__c</fullName>
    <label>merchandise</label>
    <referenceTo>merchandise__c</referenceTo>
    <relationshipLabel>LIne Items</relationshipLabel>
    <relationshipName>LIne_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>