force-app/main/default/objects/Line_Item__c/fields/Units_sold__c.field-meta.xml
<CustomField>
    <fullName>Units_sold__c</fullName>
    <label>Units sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>