force-app/main/default/objects/Line_Item__c/validationRules/Order_in_stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_in_stock</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNEW(), merchandise__r.Total_Inventory__c  &lt;  Units_sold__c,  
IF( Units_sold__c  &lt;  PRIORVALUE( Units_sold__c ) , FALSE,  merchandise__r.Total_Inventory__c  &lt; (Units_sold__c)) )</errorConditionFormula>
    <errorDisplayField>Units_sold__c</errorDisplayField>
    <errorMessage>you have ordered more items than we have in stock</errorMessage>
</ValidationRule>